bugfix: firefox textarea dont determine new wrap symbols

--- a/sass/gist-create.sass
+++ b/sass/gist-create.sass
@@ -17,7 +17,7 @@ input
   text-align: left
   resize: none
   overflow: auto
-  white-space: nowrap
+  white-space: pre-wrap
   height: 40vh
 
 
